--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </header>
     <hr />
     <!-- box-2 -->
-    <!-- Slider-Section -->
+    <!-- Slider-Section2 -->
     <section>
       <div class="Slider">
         <div class="text">
@@ -54,25 +54,27 @@
       </div>
     </section>
     <!-- box-3 -->
-    <!-- Slider-Setion2 -->
+    <!-- Slider-Setion3 -->
     <section>
       <div class="img-add">
         <div class="imgs"></div>
       </div>
     </section>
     <!-- box-4 -->
-    <!-- Slider-Section3 -->
+    <!-- Slider-Section4 -->
     <div class="paragraph">
       <p class="add-1">With private messaging and calling, you can</p>
       <p class="add-1">be yourself, speak freely and feel close to the</p>
       <p class="add-1">most important people in your life no matter</p>
       <p class="add-1">where they are.</p>
     </div>
-    <!-- box-5 -->
+    <!-- box-5 --> 
+<!-- img-Section -->
     <div class="img-add2">
       <div class="imgs-2"></div>
     </div>
     <!-- box-6 -->
+<!-- Footer-Section -->
     <footer>
       <div class="foot-section">
         <div class="foot-panel">
